# seedr-cli

./: .gitignore  README.md  main.py  pyproject.toml
seedrcc_tui/: __init__.py  cli.py  core.py  tui.py  utils.py
