[project]
name = "seedrcc-tui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "seedrcc",
    "textual>=6.11.0",
]

[project.scripts]
seedrcc-tui = "main:main"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["seedrcc_tui"]
py-modules = ["main"]

[tool.uv]
package = true

[tool.uv.sources]
seedrcc = { git = "https://github.com/hemantapkh/seedrcc.git" }
